--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/mongoose-paginate-v2": "^1.3.11",
         "nodemon": "^2.0.12",
         "typescript": "^4.3.5"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-validator": "^6.12.1",
         "mongoose": "^5.13.3",
+        "mongoose-paginate-v2": "^1.4.1",
         "ts-node": "^10.1.0"
     }
 }
